--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,16 @@
 /*body*/
 body {
-  font-family: roboto;
+	font-family: roboto;
 }
 
 #bloc_page {
-  width: auto;
-  margin: 0 auto;
+	width: auto;
+	margin: none;
 }
 
 /*images*/
 img {
-  max-width: 100%;
+	max-width: 100%;
 }
 /*color:primaire #9356DC, secondaire #FF79DA, tertiaire #99E2D0;
 Polices
@@ -19,57 +19,189 @@ Texte: Roboto*/
 
 /*header*/
 header .header a img {
-  width: 100%;
-  height: 30px;
-
-  margin-top: 1rem;
-  margin-bottom: 0.5rem;
+	width: 100%;
+	height: 30px;
+	margin-top: 1rem;
+	margin-bottom: 0.5rem;
 }
 
 /*section*/
+/*menu*/
 .menu {
-  background-color: rgb(240, 236, 236);
+	background-color: rgb(243, 240, 240);
 }
+
 .menu .point {
-  display: flex;
-  align-items: center;
-  align-content: center;
-  justify-content: center;
-  background-color: rgb(235, 227, 227);
-  gap: 1.4rem;
-  margin: none;
-  font-size: 1.2rem;
-  font-weight: bold;
-  box-shadow: 0 -1px 0 0 grey;
+	display: flex;
+	align-items: center;
+	align-content: center;
+	justify-content: center;
+	background-color: rgb(218, 218, 218);
+	gap: 1.4rem;
+	margin: none;
+	font-size: 1.2rem;
+	font-weight: bold;
+	box-shadow: 0 -1px 0 0;
 }
 
 .menu .point i {
-  margin-bottom: 0.5rem;
-}
-h1 {
-  /*font-family:Shrikhand ;*/
-  font-size: 25px;
-  text-align: center;
+	margin-bottom: 0.5rem;
 }
 
-.menu p {
-  text-align: center;
-  font-size: 18px;
+/*font-family:Shrikhand ;*/
+
+.menu .point p {
+	text-align: center;
+	font-size: 18px;
+	margin-bottom: 3px;
 }
 
 .menu form button {
-  padding: 1.3rem;
-  border-radius: 2rem;
-  color: white;
-  background-color: #ff79da;
-  text-align: center;
-  border: none;
-  cursor: pointer;
-  margin: 2rem 0rem 3.5rem 4rem;
-  font-size: 18px;
-  font-weight: 400px;
+	padding: 1rem;
+	border-radius: 2.5rem;
+	color: white;
+	background-color: #ff79da;
+	text-align: center;
+	border: none;
+	cursor: pointer;
+	margin: 2rem 0rem 3.5rem 4rem;
+	font-size: 18px;
+	font-weight: 400px;
 }
 
-.fonctionnement h2 {
-  margin-left: 0.2rem;
+/*fonctionnement*/
+.fonctionnement {
+	justify-content: center;
+	align-items: center;
+	color: #fff;
+}
+
+.fonctionnement p {
+	margin-left: 0.2rem;
+}
+
+.fonctionnement .ol li {
+	padding: 1.8rem;
+	border-radius: 1.5rem;
+	background-color: rgb(235, 231, 231);
+	color: #9356dc;
+	margin-top: 1rem;
+	font-size: 20px;
+	box-shadow: 4px 4px 4px -6px;
+}
+
+.fonctionnement .ol ol {
+	counter-reset: restaus;
+}
+
+.fonctionnement .ol .icon .text {
+	margin: 1rem;
+	text-decoration: none;
+	font-size: 1rem;
+	font-weight: bold;
+	color: #000000;
+}
+
+.fonctionnement li {
+	font-size: 1.5rem;
+	padding: 2rem;
+	list-style-type: none;
+	counter-increment: restaus;
+}
+
+.fonctionnement li:before {
+	content: counter(restaus);
+	padding: 15px;
+	background: #9356dc;
+	border-radius: 50%;
+	font-weight: 20px;
+	font-size: 20px;
+	color: #fff;
+	position: absolute;
+	left: 1rem;
+	bottom: 0rem;
+}
+
+.fonctionnement li i {
+	font-size: 1rem;
+}
+
+/*restaurants*/
+.restaurants {
+	grid-gap: 30px;
+	padding-top: 2rem;
+	background-color: #fff;
+	
+}
+
+.restaurants .vignettes {
+	display: grid;
+	grid-gap: 30px;
+	background-color: rgb(226, 218, 218);
+}
+
+.restaurants .vignettes .vignette img {
+	border-radius: 1.5rem 1.5rem 0 0;width: 100%;
+	height: 70%;
+	object-fit: cover;
+
+}
+
+.restaurants .vignettes .vignette .palette,
+.note,
+.francaise,
+.delice {
+	
+	/*border-radius: 2rem 2rem;*/
+}
+
+
+
+.vignettes .vignette {
+	border-radius: 1.5rem;
+	background-color: white;
+	box-shadow: 4px 4px 4px -6px;
+	width: 100%;
+	margin-bottom: 4rem;
+	height: 75%;
+	position: relative;
+}
+
+.vignette .nouveau {
+	/*display: flex;*/
+	padding: 0.5rem;
+	border-radius: 5px;
+	background-color: aquamarine;
+	position: absolute;
+	right: 1.5em;
+	top: 1em;
+}
+
+footer {
+	margin: 0;
+	display: flex;
+	background-color: rgb(58, 57, 57);
+}
+
+footer ul {
+	list-style-type: none;
+}
+
+footer h1 {
+	font-weight: Shrikhand;
+	font-size: 20px;
+	color: #ffff;
+	padding-right: 55px;
+}
+
+footer ul li a {
+	color: white;
+	margin-left: 2px;
+	text-decoration: none;
+}
+
+footer ul li i {
+	padding: 2px;
+	color: #ffff;
+	margin-right: 8px;
 }
