--- a/css/menu.css
+++ b/css/menu.css
@@ -9,20 +9,21 @@ body {
 	margin: 0;
 }
 
-/*images*/
-img {
-	max-width: 100%;
-}
 /*color:primaire #9356DC, secondaire #FF79DA, tertiaire #99E2D0;
 Polices
 Logo et titres: Shrikhand
 Texte: Roboto*/
 
 /*header*/
+img {
+	max-width: 100%;
+}
+
 header {
 	position: relative;
 	margin-top: 1.5rem;
 	margin-bottom: 0.5rem;
+	margin-left: 2px;
 }
 
 header a i {
@@ -39,8 +40,16 @@ header a img {
 	height: 30px;
 }
 
-/*figure*/
+/*main*/
+main {
+	background-color: rgb(243, 241, 241);
+	display: flex;
+	flex-direction: column;
+	margin: 0;
+	padding: 0;
+}
 
+/*vignette en tête*/
 .vignette {
 	position: relative;
 }
@@ -53,9 +62,9 @@ header a img {
 .vignette .h2 h2 {
 	font-size: 1.8rem;
 	font-family: "Shrikhand", cursive;
-	font-weight: bold;
+	font-weight: 100;
 	align-items: center;
-	align-content: center;
+	margin-bottom: 0rem;
 }
 
 .vignette .h2 {
@@ -67,6 +76,7 @@ header a img {
 	justify-content: space-around;
 	bottom: 0.025rem;
 	border-radius: 2.5rem 2.5rem 0 0;
+	align-items: center;
 }
 
 .vignette .h2 .heart {
@@ -75,14 +85,60 @@ header a img {
 	cursor: pointer;
 }
 
-.vignette .h2 .heart fas fa-hearth checked {
+.vignette .h2 .heart:hover {
 	background: linear-gradient(to bottom, #9356dc, #ff79da);
 }
 
-main {
-	background-color: rgb(243, 241, 241);
+/*entrées*/
+h3 {
+	font-size: 1rem;
+	font-weight: 400;
+	padding: 0;
+	margin: 0;
+}
+
+
+.entrees
+{
+	display: grid;
+	grid-gap: 1rem;
+	margin: 1rem 1rem 1rem 1rem;
+	align-items: flex-end;
+}
+
+
+
+.plats,
+.entrees,
+.desserts {
+	display: grid;
+	grid-gap: 1rem;
+	margin: 1rem 1rem 1rem 1rem;
+	align-items: flex-end;
+}
+
+
+
+main .entrees .bouton_choix .plats .bouton_choix,
+.desserts .bouton_choix {
+	background-color: #fff;
+	border-radius: 1rem;
 	display: flex;
-	flex-direction: column;
+	align-items: flex-end;
+	justify-content: space-between;
+	cursor: pointer;
+}
+
+.entrees .titre_underline,
+.plats .titre_underline,
+.desserts .titre_underline {
+	border-bottom: 3px solid#99e2d0;
+	padding-bottom: 5px;
+}
+
+.menu {
+	display: flex;
+	align-items: center;
 }
 
 .plats,
@@ -94,137 +150,117 @@ main {
 }
 
 .entrees,
-.plat,
-.desserts,
-h3 {
-	font-size: 1rem;
-	font-weight: 400;
-	margin-top: rem;
-	margin-left: rem;
-}
-
-.entrees .titre_underline {
-	border-bottom: 3px solid#99e2d0;
-	padding-bottom: 5px;
-}
-
-.plats .titre_underline {
-	border-bottom: 3px solid #99e2d0;
-	padding-bottom: 5px;
-}
-
-.desserts .titre_underline {
-	border-bottom: 3px solid #99e2d0;
-	padding-bottom: 5px;
-}
-
-.entrees,
 .plats,
 .desserts,
 .titre {
 	color: rgb(14, 13, 13);
 }
 
-.entrees .bouton_choix {
-	padding: rem;
-	background-color: #fff;
-	border-radius: 1rem;
-	display: flex;
-	align-items: flex-end;
-	justify-content: space-between;
-	margin: 0;
-	cursor: pointer;
-}
-
-.plats .bouton_choix {
-	padding: rem;
-	background-color: #fff;
-	border-radius: 1rem;
-	display: flex;
-	align-items: flex-end;
-	justify-content: space-between;
-	cursor: pointer;
-}
-
-.desserts .bouton_choix {
-	padding: rem;
-	background-color: rgb(254, 254, 255);
-	margin: 0.5rem 0.5rerem;
-	border-radius: 1rem;
-	display: flex;
-	align-items: flex-end;
-	justify-content: space-between;
-	position: relative;
-	cursor: pointer;
-}
-
-.plat {
-	font-size: 1rem;
+main .bouton_choix .plat {
+	font-size: 1.2rem;
 	font-weight: 700;
 	margin-left: 1rem;
 }
 
-.duo {
-	font-size: 0rem;
+main .bouton_choix .duo {
+	font-size: 1rem;
 	font-weight: 400;
 }
 
-.prix {
+main .bouton_choix .prix {
 	font-size: 1rem;
 	font-weight: bold;
-	transform: rotate(360deg);
-	/*position: absolute;*/
 	align-items: flex-end;
 	justify-content: flex-end;
-	margin-right: 1rem;
-	margin-top: 0.9rem;
+	align-self: end;
 }
 
-.command {
-	width: 12rem;
-	height: 3rem;
+
+
+
+.checkbox {
+	width: 0;
+	overflow: hidden;
+}
+
+.check {
+	width: 0;
+	overflow: hidden;
+	text-align: center;
+	background: #99e2d0;
+	width: 0;
+	-webkit-box-align: center;
+	-ms-flex-align: center;
 	align-items: center;
+	-webkit-transition: width 1s;
+	-o-transition: width 1s;
+	transition: width 1s;
+	padding-top: 25px;
+}
+
+/*section command*/
+main form button {
+	padding: 1.1rem 3.5rem 1.1rem 3.5rem;
+	border-radius: 2.5rem;
 	border: none;
-	border-radius: 1.5rem;
-	color: #ffff;
+	margin: 0.8rem 6rem 3.5rem 6rem;
 	font-size: 14px;
 	font-weight: 700;
-	background: linear-gradient(to top right, #9356dc, #ff79da);
-	box-shadow: 0 5px 10px 0 rgb(0 0 0 / 20%);
-	text-align: center;
 	cursor: pointer;
-	transition: opacity 0.2s;
-	margin: 0.8rem 0rem 3.5rem 5rem;
+	text-align: center;
+	align-items: center;
+	color: white;
+	background: linear-gradient(162deg, #ff79da 0%, #9356dc 100%);
+	box-shadow: 0 5px 10px 0 rgba(70, 52, 52, 0.4);
+	transition: transform 4000ms;
+	transition: 0.2s ease-in-out;
 }
 
+main form button:hover {
+	background: linear-gradient(165deg, #ff79da 20%, #9356dc 100%);
+	transform: scale(1 25);
+}
+
+*/
 /*footer*/
 footer {
-	margin: 0;
-	background-color: rgb(54, 52, 52);
-	padding-top: 0.2rem;
+	background-color: rgb(58, 57, 57);
+	padding-top: 0.5rem;
 	padding-bottom: 1rem;
 }
 
 footer ul {
 	list-style-type: none;
+	padding: 0;
+	margin-left: 1rem;
 }
 
 footer h1 {
-	font-weight: Shrikhand;
+	font-family: "Shrikhand", cursive;
 	font-size: 18px;
-	color: #ffff;
-	margin-left: 1.25rem;
+	font-weight: 100;
+	color: #fff;
+	margin-left: 1rem;
+	margin-top: 1rem;
 }
 
 footer ul li a {
 	color: #fff;
 	text-decoration: none;
-	font-weight: 500;
-	line-height: 1.7em;
+	font-weight: 400;
+	line-height: 1.7rem;
+}
+
+footer ul li a .contact {
+	line-height: none;
 }
 
 footer ul li .fine {
 	font-weight: 300;
+}
+
+footer ul li .cherche {
+	font-weight: 400;
 }
 
 footer ul li i {
