--- a/scss/palette.scss
+++ b/scss/palette.scss
@@ -119,7 +119,7 @@ h3 {
 
 
 
-main .entrees .bouton_choix .plats .bouton_choix,
+.entrees .bouton_choix, .plats .bouton_choix,
 .desserts .bouton_choix {
 	background-color: #fff;
 	border-radius: 1rem;
@@ -176,8 +176,6 @@ main .bouton_choix .prix {
 }
 
 
-
-
 .checkbox {
 	width: 0;
 	overflow: hidden;
@@ -195,8 +193,10 @@ main .bouton_choix .prix {
 	-webkit-transition: width 1s;
 	-o-transition: width 1s;
 	transition: width 1s;
-	padding-top: 25px;
+	padding-top: px;
 }
+
+
 
 /*section command*/
 main form button {
@@ -219,52 +219,4 @@ main form button {
 main form button:hover {
 	background: linear-gradient(165deg, #ff79da 20%, #9356dc 100%);
 	transform: scale(1 25);
-}
-
-*/
-/*footer*/
-footer {
-	background-color: rgb(58, 57, 57);
-	padding-top: 0.5rem;
-	padding-bottom: 1rem;
-}
-
-footer ul {
-	list-style-type: none;
-	padding: 0;
-	margin-left: 1rem;
-}
-
-footer h1 {
-	font-family: "Shrikhand", cursive;
-	font-size: 18px;
-	font-weight: 100;
-	color: #fff;
-	margin-left: 1rem;
-	margin-top: 1rem;
-}
-
-footer ul li a {
-	color: #fff;
-	text-decoration: none;
-	font-weight: 400;
-	line-height: 1.7rem;
-}
-
-footer ul li a .contact {
-	line-height: none;
-}
-
-footer ul li .fine {
-	font-weight: 300;
-}
-
-footer ul li .cherche {
-	font-weight: 400;
-}
-
-footer ul li i {
-	color: #fff;
-	margin-right: 8px;
-	font-size: 12px;
 }
